Update Project  - Add Design  - Add Icon

--- a/Localeyes/Base.lproj/Main.storyboard
+++ b/Localeyes/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainView-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController title="MainView" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="fN0-g9-bbv"/>
                         <viewControllerLayoutGuide type="bottom" id="cUX-NQ-dCR"/>
@@ -42,31 +42,31 @@
                                 </state>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hsj-m5-hSg">
-                                <rect key="frame" x="-1" y="25" width="768" height="991"/>
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YfG-bJ-hL0">
-                                        <rect key="frame" x="0.0" y="630" width="768" height="549"/>
-                                        <state key="normal">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YfG-bJ-hL0" userLabel="shooterButton">
+                                        <rect key="frame" x="669" y="506" width="99" height="89"/>
                                         <connections>
                                             <action selector="takePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iH4-8O-9G0"/>
                                         </connections>
                                     </button>
                                     <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="instagram12" translatesAutoresizingMaskIntoConstraints="NO" id="HLt-mc-qs2">
-                                        <rect key="frame" x="21" y="7" width="34" height="34"/>
+                                        <rect key="frame" x="21" y="32" width="34" height="34"/>
                                     </imageView>
                                     <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="camera60" translatesAutoresizingMaskIntoConstraints="NO" id="nxw-4Y-f34">
-                                        <rect key="frame" x="21" y="55" width="34" height="34"/>
+                                        <rect key="frame" x="21" y="80" width="34" height="34"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shoot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p8O-lw-6Ih">
-                                        <rect key="frame" x="63" y="11" width="246" height="26"/>
+                                        <rect key="frame" x="63" y="36" width="246" height="26"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" alpha="0.5499999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BaC-wd-oq4">
-                                        <rect key="frame" x="0.0" y="791" width="768" height="456"/>
+                                        <rect key="frame" x="0.0" y="995" width="768" height="456"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="shooterFull" translatesAutoresizingMaskIntoConstraints="NO" id="Qed-Xt-u5J">
+                                        <rect key="frame" x="669" y="506" width="91" height="89"/>
                                     </imageView>
                                 </subviews>
                             </view>
@@ -82,12 +82,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="78" y="529"/>
+            <point key="canvasLocation" x="154" y="619"/>
         </scene>
     </scenes>
     <resources>
         <image name="camera60" width="24" height="24"/>
         <image name="instagram12" width="24" height="24"/>
+        <image name="shooterFull" width="128" height="128"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
